# decentralized-identity-management

./: Cargo.toml  README.md
examples/: client.rs  commands.txt
src/: diddocument.rs  didinstruction.rs  didpublickey.rs  didservice.rs  lib copy.rs  lib.rs
